# django-workflow-system

./: .coveragerc  .gitignore  MANIFEST.in  README.md  README.rst  manage.py  package.json  pyproject.toml  requirements.txt  retype.yml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  startup.sh
.github/workflows/: pr_tests.yml
django_workflow_system/: __init__.py  apps.py  views.py
django_workflow_system/admin/: __init__.py  collection.py  collection_dependency.py  everything_else.py  step.py
django_workflow_system/migrations/: 0001_initial.py  0002_auto_20210423_0841.py  0002_auto_20210518_1357.py  0002_create_standard_user_input_types.py  0003_auto_20210428_0904.py  0003_auto_20210519_1330.py  0003_auto_20210602_0920.py  0003_auto_20210617_0727.py  0004_auto_20210429_0924.py  0004_auto_20210602_0921.py  0004_auto_20210701_0910.py  0004_workflowcollection_metadata.py  0005_auto_20210510_0621.py  0005_auto_20210720_0834.py  0005_workflow_metadata.py  0006_auto_20210510_0624.py  0006_auto_20210519_1437.py  0006_auto_20210723_1204.py  0007_additional_user_input_types.py  0007_workflowstepexternallink.py  0008_auto_20210510_0735.py  0008_auto_20210723_1601.py  0009_auto_20210510_1800.py  0009_update_user_input_types.py  0010_auto_20210511_1022.py  0010_auto_20211102_0951.py  0010_auto_20211104_1636.py  0010_auto_20211105_0940.py  0010_workflowstepuserinput_url.py  0011_workflowstepuserinput_url.py  0011_workflowstepuserinputtype_response_schema.py
django_workflow_system/models/: __init__.py  assignment.py  author.py  collection.py  collection_dependency.py  collection_image.py  collection_member.py  metadata.py  (+25 more)
docs/: conf.py  index.md  index.rst  models.md  workflow.rst
eggsellent/: spaghetti_question.py
test_project/: settings.py  urls.py
workflows/: admin.py  apps.py  utils.py
(+186 files in other folders)
