[metadata]
name = django-workflow-system
version = 0.8.9
description = A highly customizable workflow system for Django. Create surveys, activities, etc.
description-file = README.md
long_description_content_type = text/markdown
author = Justin Branco, Michael Dunn, Brett Fox
author_email = prometheus-team@nd.edu
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
